third_party/move/move-compiler-v2/tests/more-v1/parser/constant_native.exp

Diagnostics:
error: invalid modifier
  ┌─ tests/more-v1/parser/constant_native.move:3:5
  │
3 │     native const Foo: u64 = 0;
  │     ^^^^^^ Invalid constant declaration. 'native' constants are not supported
